--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
               <img id="start_div_img" src="assets/img/Iron.png" alt="iron">
 
               <select id="startDivision">
-                <option value="Iron">Iron</option>
-                <option value="Bronze">Bronze</option>
-                <option value="Silver">Silver</option>
-                <option value="Gold">Gold</option>
-                <option value="Platinum">Platinum</option>
-                <option value="Diamond">Diamond</option>
-                <option value="Master">Master</option>
+                <option value="1">Iron</option>
+                <option value="2">Bronze</option>
+                <option value="3">Silver</option>
+                <option value="4">Gold</option>
+                <option value="5">Platinum</option>
+                <option value="6">Diamond</option>
+                <option value="7">Master</option>
               </select>
               
-              <select>
+              <select id="startDivisionSelectValue">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -162,16 +162,16 @@
               <img id="goal_div_img" src="assets/img/Iron.png" alt="iron">
 
               <select id="goalDivision">
-                <option value="Iron">Iron</option>
-                <option value="Bronze">Bronze</option>
-                <option value="Silver">Silver</option>
-                <option value="Gold">Gold</option>
-                <option value="Platinum">Platinum</option>
-                <option value="Diamond">Diamond</option>
-                <option value="Master">Master</option>
+                <option value="1">Iron</option>
+                <option value="2">Bronze</option>
+                <option value="3">Silver</option>
+                <option value="4">Gold</option>
+                <option value="5">Platinum</option>
+                <option value="6">Diamond</option>
+                <option value="7">Master</option>
               </select>
               
-              <select>
+              <select id="endDivisionSelectValue">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -214,7 +214,7 @@
 
             <div class="form_box">
               <label>Cena</label>
-              <p id="price">20 ZŁ</p>
+              <p id="price">0 ZŁ</p>
               <p class="error"></p>
             </div>
 
