--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
 
             <div class="button_box">
-              <button>Zapłać</button> 
+              <button id="payButton">Zapłać</button> 
             </div>
 
           </div>
