--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           >
             Szybki i skuteczny boosting od zaraz!
           </h2>
-          <a class="btn btn-primary js-scroll-trigger" href="#projects"
+          <a class="btn btn-primary js-scroll-trigger" href="test.html"
             >Zakup boosting!</a
           >
         </div>
