--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
               <a class="nav-link js-scroll-trigger" href="#signup">Kontakt</a>
             </li>
             <li class="nav-item-discord-facebook">
-              <a class="mx-2 nav-link js-scroll-trigger "" href="#!"><i class="fab fa-discord"></i></a>
+              <a class="mx-2 nav-link js-scroll-trigger"  href="#!"><i class="fab fa-discord"></i></a>
             </li>
             <li class="nav-item-discord-facebook">
-              <a class="mx-2 nav-link js-scroll-trigger "" href="#!"><i class="fab fa-facebook-f"></i></a>
+              <a class="mx-2 nav-link js-scroll-trigger"  href="#!"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
         </div>
